feat: fts
