# api/openapi/manifest.yaml
@@ -3,7 +3,7 @@ info:
   title: Pluto Manifest API
   version: 1.0.0
 paths:
-  /manifests:
+  /api/manifests:
     get:
       operationId: listManifests
       parameters:
@@ -28,6 +28,30 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Manifest"
+  /api/manifests/search:
+    get:
+      operationId: GetManifestsBySearch
+      parameters:
+        - name: query
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: Accept-Language
+          in: header
+          required: false
+          schema:
+            type: string
+            example: "en-US"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Manifest"
 components:
   schemas:
     Manifest:
@@ -36,6 +60,10 @@ components:
         id:
           type: string
           format: uuid
+        title:
+          type: string
+        description:
+          type: string
         version:
           type: string
         icon:
@@ -58,6 +86,8 @@ components:
           format: date-time
       required:
         - id
+        - title
+        - description
         - version
         - icon
         - category
