# internal/manifest/api/gen/api.gen.go
@@ -1,0 +1,9 @@
+// Code generated by go generate; DO NOT EDIT.
+
+//go:generate oapi-codegen -package gen -generate types -o types.gen.go ../../../../api/openapi/manifest.yaml
+
+//go:generate oapi-codegen -package gen -generate chi-server -o server.gen.go ../../../../api/openapi/manifest.yaml
+
+//go:generate oapi-codegen -package gen -generate spec -o spec.gen.go ../../../../api/openapi/manifest.yaml
+
+package gen
