# internal/manifest/handlers/api.gen.go
@@ -1,10 +1,0 @@
-// Code generated by go generate; DO NOT EDIT.
-//package handlers
-
-//go:generate oapi-codegen -package handlers -generate types -o generated/types.gen.go ../../../api/openapi/manifest.yaml
-
-//go:generate oapi-codegen -package handlers -generate chi-server -o generated/server.gen.go ../../../api/openapi/manifest.yaml
-
-//go:generate oapi-codegen -package handlers -generate spec -o generated/spec.gen.go ../../../api/openapi/manifest.yaml
-
-package handlers
